# fimi-rs

./: Cargo.toml  README.md
fimi/: Cargo.toml
fimi/src/: lib.rs
fimi/src/interfaces/: executor.rs  manifest.rs  mod.rs
fimi_example/: Cargo.toml
fimi_example/src/: main.rs
fimi_example/src/migrations/: _20241021212814_init_migration.rs  _20241022110124_add_new_key_to_test_structs.rs  helpers.rs  mod.rs
fimi_magic/: Cargo.toml
fimi_magic/src/: lib.rs
