[package]
name = "fimi"
version = "0.1.3"
edition = "2021"
description = "A generic migration framework"
license = "MIT OR Apache-2.0"
keywords = ["file", "migration"]
repository = "https://github.com/aaronhallaert/fimi-rs"
readme = "README.md"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
dirs = "5.0.1"
serde = "1.0.211"
serde_derive = "1.0.211"
serde_json = "1.0.132"
mockall = "0.13.0"


[lib]
path = "src/lib.rs"
